whoami/01-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
    name: whoami
    labels:
        app: whoami
spec:
    replicas: 1
    selector:
        matchLabels:
            app: whoami
    template:
        metadata:
            labels:
                app: whoami
        spec:
            containers:
            - name: whoami
              image: traefik/whoami
              ports:
              - name: web
                containerPort: 80
