whoami/03-ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
spec:
  entryPoints:
  - http
  routes:
  - match: Host(`whoami.lancastrian.dev`)
    kind: Rule
    priority: 1
    middlewares:
    - name: oauth-errors
    - name: oauth-auth-redirect
    services:
    - name: whoami
      port: 80
